# sistemas_distribuidos

./: .coveragerc  .gitignore  README.md  setup.cfg
sistemas_distribuidos/: __init__.py  __main__.py
sistemas_distribuidos/base/: __init__.py  _connect.py  _serve.py
sistemas_distribuidos/calculator/: __init__.py  _client.py  _server.py
sistemas_distribuidos/calculator/exposed/: __init__.py
sistemas_distribuidos/hello/: _client.py  _server.py
sistemas_distribuidos/rpc/: __init__.py  _client.py  _request.py  _response.py  _server.py
sistemas_distribuidos/word_counter/: _client.py  _server.py
tests/: test_import.py
